# PyQtComponents

./: .gitignore  README.md  pyproject.toml
docs/: gui-design-specification.html
examples/: demo.py  demo_responsive.py  main_app.py
src/pyqtcomponents/: __init__.py
src/pyqtcomponents/icons/: __init__.py  provider.py
src/pyqtcomponents/layout/: __init__.py  responsive.py
src/pyqtcomponents/theme/: __init__.py  accessibility.py  contrast.py  focus.py  manager.py  plot.py  spacing.py  tokens.py  typography.py
src/pyqtcomponents/widgets/: __init__.py  advanced.py  button.py  dialogs.py  extra_widgets.py  extras.py  input.py  panels.py  toast.py  ui_components.py  widgets_v3.py
tests/: conftest.py  test_accessibility.py  test_advanced.py  test_button.py  test_contrast.py  test_dialogs.py  test_extra_widgets.py  test_extras.py  test_focus.py  test_icons.py  test_input.py  test_layout.py  test_panels.py  test_plot.py  test_toast.py  test_ui_components.py  test_widgets_v3.py
