[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyQtComponents"
version = "0.1.0"
description = "Reusable PyQt/PySide6 GUI components with semantic design tokens"
readme = "README.md"
license = "LGPL-3.0-only"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyqtcomponents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
